# funboy

./: CMakeLists.txt  license.md  meson.build  meson_options.txt  readme.md
doc/: opcodes-decoding.md
doc/cpu/: sm83.md
doc/ps1/: compat.md
src/: alarms.c  alarms.h  main.c  version.h
src/cpu/: mips1.c  mips1.h
src/cpu/lr35902/: lr35902.c  lr35902.h
src/cpu/mips1/: mips1.c  mips1.h
src/cpu/mos6502/: mos6502.c  mos6502.h  my6502.c
src/cpu/sm83/: sm83.c  sm83.h  sm83_cached.c  sm83_ops.c  sm83_ops.h
src/device/: device.h  generic_bus.c  generic_ram.c  generic_register.c  generic_rom.c
src/io/: fbdev.c  io.h  mac.c  mac.r  sdl.c
src/system/: ps1.c
src/system/gb/: dmg_ppu.c  gb.c  gb.h  input.c  input.h  mbc.h  mbc1.c  mbc3.c  ppu.h  serial_log.c  serial_log.h  timer.c  timer.h
src/system/nes/: nes.c
src/system/ps1/: ps1.c  ps1.h
src/system/vic20/: vic20.c  vic20.h  vic_video.c
